[package]
name = "cnpt"
version = "0.1.0"
edition = "2024"
authors = ["PG Thinker"]
description = "A simple command-line tool for push or del code snippet."

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0.97"
dirs = "6.0.0"
chrono = "0.4.40"
log = "0.4.26"
env_logger = "0.11.7"
config = "0.15.11"
serde = "1.0.219"
serde_yaml = "0.9.34"
